# mc-launcher-rs

./: Cargo.toml  README.md
mc-launcher-api/: Cargo.toml
mc-launcher-api/src/: file.rs  game.rs  lib.rs  resources.rs
mc-launcher-api/src/metadata/: assets.rs  game.rs  manifest.rs  mod.rs
mc-launcher-api/src/serde/: game.rs  manifest.rs  mod.rs  rule.rs
mc-launcher-api/tests/: game.rs  metadata.rs  serde.rs
src/: download.rs  file.rs  lib.rs  main.rs  process.rs  resources.rs
src/file/: game.rs  mod.rs
src/io/: download.rs  file.rs  game.rs  mod.rs  process.rs  sync.rs
src/metadata/: assets.rs  game.rs  manifest.rs
tests/: download.rs
