[package]
name = "mcl-rs"
version = "0.3.0"
edition = "2021"
rust-version = "1.60.0"

[dependencies]
serde = "1"
serde_derive = "1"
serde_with = "1.13.0"
url = { version = "2.2.2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"

tokio = { version = "1.17", features = ["fs", "process"] }
reqwest = { version = "0.11", features = ["json"] }
futures-util = "0.3.21"

zip = "0.6.2"
dirs = "4"

sha1 = { version = "0.10.0", optional = true }
hex = { version = "0.4.3", optional = true }

tracing = "0.1"
thiserror = "1.0"

[features]
default = []
sha1 = ["dep:sha1", "dep:hex"]

[dev-dependencies]
tokio = { version = "1.17", features = ["full"] }
tracing-subscriber = "0.3.11"
opentelemetry = "0.17.0"
opentelemetry-jaeger = "0.16.0"
tracing-opentelemetry = "0.17.2"
