[package]
name = "mcl-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
mcl-rs = { git = "https://github.com/r4v3n6101/mc-launcher-rs" }
reqwest = "0.11"
tokio = { version = "1.18.0", features = ["full"] }
clap = { version = "3.1.14", features = ["derive"] }
indicatif = "0.17.0-rc.10"
anyhow = "1.0"
