[package]
name = "mc-launcher-api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1"
serde_derive = "1"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.17.0", features = ["full"] }
futures = "0.3"
