[package]
name = "mc-launcher-api"
version = "0.2.0"
edition = "2021"

[dependencies]
serde = "1"
serde_derive = "1"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
tokio = { version = "1.17", features = ["fs", "process", "io-util"] }
reqwest = { version = "0.11", features = ["json"] }
futures-util = "0.3.21"
tracing = "0.1"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.17", features = ["full"] }
tracing-subscriber = "0.3.11"
opentelemetry = "0.17.0"
opentelemetry-jaeger = "0.16.0"
tracing-opentelemetry = "0.17.2"
